tests/sfzs/good/05_samples_astride/sfz/root.sfz
// SFZ with samples in directory astride sfz directory
// Copyright 2006, Leon Dionne

<group>
// Low notes
lokey=36
hikey=48

<region>
// Quiet notes
hivel=64	// Only respond to velocity at or below mezzopiano
sample=../samples/sample_1.wav

<region>
// Mid-velocity notes
lovel=64 hivel=80
sample=../samples/sample_2.wav

<region>
// Loud notes
lovel=80
sample=../samples/sample_3.wav

<group>
// Midrange notes
lokey=49 hikey=63

<region>
// Quiet notes
hivel=64
sample=../samples/sample_1.wav

<region>
// Mid-velocity notes
lovel=64 hivel=80	// Respond to velocities from mezzopiano to mezzoforte
sample=../samples/sample_2.wav

<region>
// Loud notes
lovel=80	// hivel is implied
sample=../samples/sample_3.wav

